--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,8 @@ tauri-build = { version = "1.2", features = [] }
 tauri = { version = "1.2", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+midir = "0.9.1"
+serde_bytes = "0.11.9"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
