--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,10 @@ root = true
 [*]
 indent_style = space
 indent_size = 2
-end_of_line = crlfcharset = utf-8
-trim_trailing_whitespace = false
-insert_final_newline = false
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.rs]
 indent_size = 4
