--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "solid-js": "^1.8.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.4.1",
     "@tauri-apps/cli": "^1.5.7",
     "@types/node": "^20.10.4",
     "typescript": "^5.3.3",
