--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 midir = "0.9.1"
 serde_bytes = "0.11.9"
+nom = "7.1.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
