--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@solidjs/router": "^0.10.6",
     "@tauri-apps/api": "^1.5.1",
     "solid-js": "^1.8.7"
   },
