--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 midir = "0.9.1"
 serde_bytes = "0.11.9"
 nom = "7.1.3"
+toml = "0.8.8"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
