--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ midir = "0.9.1"
 serde_bytes = "0.11.9"
 nom = "7.1.3"
 toml = "0.8.8"
+encoding_rs = "0.8.33"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
