--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_7b0ee4995efdb4a"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "chromatic": "^11.22.0",
     "postcss": "^8.4.49",
     "storybook": "8.4.7",
     "tailwindcss": "^3.4.17",
