--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [workspace]
 members = [
-  "crates/recomposer-file",
+  "crates/recomposer-file", "crates/sted-cli",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
