--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hotkeys-hook": "^5.2.3",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
