--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 
 [workspace]
 members = [
-  "crates/recomposer-file", "crates/sted-cli", "crates/sted-core",
+  "crates/recomposer-file", "crates/sted-cli", "crates/sted-core", "crates/sted-midi",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -27,4 +27,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serialport = "4.8.1"
 
