--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "storybook": "8.4.7",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vitest": "^4.0.18"
   }
 }
