--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-router": "^7.13.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/vite": "^4.1.18",
     "@biomejs/biome": "2.3.13",
     "@chromatic-com/storybook": "^5.0.0",
     "@storybook/addon-docs": "10.2.1",
@@ -30,7 +32,6 @@
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
-    "autoprefixer": "^10.4.23",
     "chromatic": "^13.3.5",
     "postcss": "^8.5.6",
     "storybook": "10.2.1",
